fix: layout and metadata

--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cubemap Format Converter</title>
+    <meta
+      name="description"
+      content="A tool to convert cubemaps between different formats. Supports conversion between 6x1, 1x6, 3x2, 2x3, horizontal cross, vertical cross, and equirectangular formats, as well as custom formats through a drag-and-drop editor."
+    />
+    <meta name="keywords" content="cubemap, conversion, skybox" />
+    <meta property="og:title" content="Cubemap format converter" />
+    <meta
+      property="og:description"
+      content="Convert cubemaps between multiple formats including cross layouts, grid formats, and equirectangular projection, or create a custom cubemap layout."
+    />
+    <meta property="og:type" content="website" />
+    <title>Cubemap format converter</title>
   </head>
   <body>
     <div id="app"></div>
